# xav.io

./: .gitignore  CNAME  Gemfile  Procfile  README.md  Rakefile  about.html  archive.html  config.ru  config.toml  contact.html  haskell.yml  index.html  site.hs  stack.yaml  xavio.sublime-project  xxx.cabal
.circleci/: config.yml
.github/workflows/: deploy.yml  haskell.yml
about/: index.html
archive/: index.html
config/: application.rb  environment.rb  mongoid.yml  routes.rb
contact/: index.html
content/: about.md  verification-in-practice.md
css/: _command.css  _json.css  _normalize.css  _zsh.css  default.css  default.scss  highlighting.css  highlighting.scss  style.css  style.scss  typescale.css  typescale.scss
new/: .gitignore  config.toml
posts/: 2015-08-12-spqr.html  2015-08-12-spqr.markdown  2015-10-07-rosa-rosa-rosam.html  2015-10-07-rosa-rosa-rosam.markdown  2015-11-28-carpe-diem.html  2015-11-28-carpe-diem.markdown  2015-12-07-tu-quoque.html  2015-12-07-tu-quoque.markdown  besm-update-2.md  besm-update.md  besm.md  compiler.html  compiler.md  debugging-your-language.html  debugging-your-language.markdown  error-messages.html  error-messages.markdown  generative.md
public/: addition.v  index.html  jquery-ui-1.8.17.custom.min.js  profile.html  whoami.json
sass/: _command.scss  default.scss  highlighting.scss  style.scss
src/: Main.hs
stylesheets/: _json.scss  _zsh.scss  solarized.scss  style.scss
templates/: base.html  blog.html  default.html  pages.html  post-list.html  post.html  section.html
views/: index.html.haml  whoami.json
(+67 files in other folders)
