name:               xxx
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          Main.hs
  build-depends:    base == 4.*
                  , hakyll
                  , hakyll-sass
  hs-source-dirs:   src
  ghc-options:      -threaded
  default-language: Haskell2010
